manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: product-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: product-service
        app: product-service
    spec:
      containers:
        - name: product-service
          image: docker.io/lazycomputing/product-service
          ports:
            - containerPort: 8080
              name: service
            - containerPort: 8081
              name: management
