manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    svc: product-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: product-service
  ports:
    - name: service
      protocol: TCP
      port: 8080
      targetPort: service
    - name: management
      port: 8081
      protocol: TCP
      targetPort: management
